--- a/#source/html/content/about.html
+++ b/#source/html/content/about.html
@@ -6,36 +6,39 @@
 			<div class="about__column">
 				<div class="about__image ">
 					<div class="about__image-wrapper">
-						<img src="assets/images/about/about.png" alt="#">
+						<img class="your-element wow animate__zoomInDown " data-tilt data-wow-duration="1.5s"
+							data-wow-offset=" 300" src="assets/images/about/about.png" alt="#">
 					</div>
 				</div>
 			</div>
 
 
-			<div class="about__column">
+			<div class="about__column  ">
 				<div class="about__description">
 
-					<h2 class="title--white about__title">What makes Smoothie an <span> awesome drink? </span></h2>
+					<h2 class="title--white about__title wow animate__fadeInDown" data-wow-duration="1.5s"
+						data-wow-offset=" 300">What makes Smoothie an <span> awesome drink? </span></h2>
 
 					<ul class="about__list">
-						<li class="about__item">Crunchy Puffs Texture</>
+						<li class="about__item wow animate__fadeInRight" data-wow-offset=" 300">Crunchy Puffs Texture</>
 						</li>
-						<li class="about__item">100 Calories per drink</>
+						<li class="about__item wow  animate__fadeInLeft" data-wow-offset=" 300">100 Calories per drink</>
 						</li>
-						<li class="about__item">4g Plant Protein </>
+						<li class="about__item wow animate__fadeInRight" data-wow-offset=" 300">4g Plant Protein </>
 						</li>
-						<li class="about__item">Good source of Magnesium & Vitamin B6
+						<li class="about__item wow  animate__fadeInLeft" data-wow-offset=" 300">Good source of Magnesium &
+							Vitamin B6
 						</li>
-						<li class="about__item">No Sugar in our Savory Flavors
+						<li class="about__item wow animate__fadeInRight" data-wow-offset=" 300">No Sugar in our Savory Flavors
 						</li>
-						<li class="about__item">Non-GMO, Vegan & Paleo</>
+						<li class="about__item wow animate__fadeInLeft" data-wow-offset=" 300">Non-GMO, Vegan & Paleo</>
 						</li>
-						<li class="about__item">Gluten-Free & Grain-Free</>
+						<li class="about__item wow animate__fadeInRight" data-wow-offset=" 300">Gluten-Free & Grain-Free</>
 						</li>
-						<li class="about__item">Corn-Free & Soy-Free</li>
+						<li class="about__item wow animate__fadeInRight" data-wow-offset=" 300">Corn-Free & Soy-Free</li>
 					</ul>
 
-					<button class="bth  about__bth " type="submit">
+					<button class="bth  about__bth wow animate__fadeInUpBig" data-wow-duration="1.5s" type="submit">
 						About Organic Smoothie</button>
 
 
