--- a/#source/html/content/testimonials.html
+++ b/#source/html/content/testimonials.html
@@ -2,19 +2,22 @@
 <section class="testimonials">
 	<div class="testimonials__wrapper">
 
-		<h2 class="title">Why clients <span class="title--color"> LOVE</span> us?</h2>
+		<h2 class="title wow animate__fadeInDownBig" data-wow-duration=" 1s" data-wow-offset=" 150">Why clients <span
+				class="title--color "> LOVE</span> us?</h2>
 
 		<div class="testimonials__row">
 
 			<div class="testimonials__column">
 
-				<q class="text testimonials__text">
+				<q class="text testimonials__text wow animate__fadeInLeftBig" data-wow-duration=" 1s"
+					data-wow-offset=" 150">
 					Smoothie is great. I don't know what else to say. I will let my mum know about this, she could
 					really make use of Smoothie! Smoothie saved my business.
 				</q>
 
 				<div class="testimonials__sub-text">
-					<cite class="testimonials-name__user">- from Santa Monica, CA</cite>
+					<cite class="testimonials-name__user wow animate__fadeInUpBig" data-wow-duration=" 1s"
+						data-wow-offset=" 150">- from Santa Monica, CA</cite>
 				</div>
 
 			</div>
@@ -22,8 +25,9 @@
 
 			<div class="testimonials__column">
 
-				<div class="testimonials-avatar">
-					<img src="assets/images/testimonials/avatar.png" alt="">
+				<div class="testimonials-avatar ">
+					<img class="wow animate__fadeInRightBig" data-wow-duration=" 1s" data-wow-offset=" 150"
+						src="assets/images/testimonials/avatar.png" alt="">
 				</div>
 
 			</div>
