--- a/#source/html/footer.html
+++ b/#source/html/footer.html
@@ -8,49 +8,53 @@
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
 				<div class="footer__image">
-					<img src="assets/images/header/Logo.png" alt="#">
+					<img class="wow animate__fadeInUp " data-wow-offset=" 150" data-wow-duration="1.5s"
+						src="assets/images/header/Logo.png" alt="#">
 				</div>
 			</div>
 			<!----colum-------------------------------------------------->
-			<div class="footer__column">
+			<div class="footer__column wow animate__fadeInUp " data-wow-offset=" 150" data-wow-duration="1.5s">
 
 				<h3 class="title-h3 footer__title">Information</h3>
 
 				<ul class="footer__list">
-					<li class="footer__item">
+					<li class="footer__item wow animate__fadeInLeftBig " data-wow-delay="150ms" data-wow-offset=" 150"
+						data-wow-duration="1.5s">
 						<a href="#">Search</a>
 					</li>
 				</ul>
 
 				<ul class="footer__list">
-					<li class="footer__item">
+					<li class="footer__item wow animate__fadeInRightBig " data-wow-offset=" 150" data-wow-duration="1.6s">
 						<a href="#"> Contact us</a>
 					</li>
 				</ul>
 
 				<ul class="footer__list">
-					<li class="footer__item">
+					<li class="footer__item wow animate__fadeInLeftBig " data-wow-offset=" 150" data-wow-duration="1.7s">
 						<a href="#">Terms & Conditions</a>
 					</li>
 				</ul>
 
 				<ul class="footer__list">
-					<li class="footer__item">
+					<li class="footer__item wow animate__fadeInRightBig " data-wow-offset=" 150" data-wow-duration="1.8s">
 						<a href="#">Privacy Policy</a>
 					</li>
 				</ul>
 
 			</div>
 			<!----colum-------------------------------------------------->
-			<div class="footer__column">
+			<div class="footer__column wow animate__fadeInUp " data-wow-delay="600ms" data-wow-offset=" 150"
+				data-wow-duration="1.5s">
 
 				<h3 class="title-h3 footer__title">Payment</h3>
 				<!---sub-colum-------------------------------------------------->
-				<ul class="footer-icon__list">
+				<ul class="footer-icon__list wow animate__fadeInLeftBig " data-wow-delay="600ms" data-wow-offset=" 150"
+					data-wow-duration="1.5s">
 
-					<li class="footer-icon__item">
+					<li class="footer-icon__item ">
 						<a class="footer-icon__link" href="#">
-							<img src="assets/images/footer/AMEX.png" alt="#">
+							<img class="" src="assets/images/footer/AMEX.png" alt="#">
 						</a>
 					</li>
 
@@ -74,7 +78,8 @@
 
 				</ul>
 				<!--- sub-colum-------------------------------------------------->
-				<ul class="footer-icon__list">
+				<ul class="footer-icon__list wow animate__fadeInRightBig " data-wow-delay="800ms" data-wow-offset=" 150"
+					data-wow-duration="1.5s">
 
 					<li class="footer-icon__item">
 						<a class="footer-icon__link" href="#">
@@ -96,7 +101,8 @@
 
 				</ul>
 				<!--- sub-colum-------------------------------------------------->
-				<ul class="footer-icon__list">
+				<ul class="footer-icon__list wow animate__fadeInLeftBig " data-wow-delay="1000ms" data-wow-offset=" 150"
+					data-wow-duration="1.5s">
 
 					<li class="footer-icon__item">
 						<a class="footer-icon__link" href="#">
@@ -114,22 +120,28 @@
 				<!----------------------------------------------------->
 			</div>
 			<!----colum-------------------------------------------------->
-			<div class="footer__column">
+			<div class="footer__column wow animate__fadeInUp " data-wow-delay="1200ms" data-wow-offset=" 150"
+				data-wow-duration="1.5s">
 				<h3 class="title-h3 footer__title">Don’t miss out!</h3>
 
 				<div class="input">
 
-					<input class="input__search" type="search" name="search" placeholder="Subscribe to our newsletter">
+					<input class="input__search wow animate__fadeInDown " data-wow-delay="1000ms" data-wow-offset=" 150"
+						data-wow-duration="1.5s" type="search" name="search" placeholder="Subscribe to our newsletter">
+					<img class="input__image" src="../assets/images/footer/Icon.png" alt="">
 
 				</div>
 
 				<div class="footer__row footer__row--df">
 
-					<h3 class="footer__text"><span> Follow Us</span></h3>
+					<h3 class="footer__text wow animate__fadeInLeftBig " data-wow-delay="1200ms" data-wow-duration="1.5s">
+						<span> Follow Us</span>
+					</h3>
 					<!--- sub-colum-------------------------------------------->
-					<ul class="footer-icon__list">
+					<ul class="footer-icon__list wow animate__fadeInRightBig " data-wow-delay="1200ms"
+						data-wow-duration="1.5s">
 
-						<li class="footer-icon__item">
+						<li class="footer-icon__item ">
 							<a class="footer-icon__link" href="#">
 								<img src="assets/images/footer/Facebook.png" alt="#">
 							</a>
@@ -164,10 +176,13 @@
 	<div class="footer__bottom--bg">
 		<div class="conteiner">
 			<div class="footer__bottom">
-				<address class="author-rights">© 2020. All Rights Reserved.
+				<address class="author-rights wow animate__fadeInLeftBig " data-wow-duration="1.5s">
+					© 2020.
+					All Rights Reserved.
 				</address>
 
-				<p class="footer__bottom-text">Go top</p>
+				<p class="footer__bottom-text wow animate__fadeInRightBig " data-wow-duration="1.5s">Go top
+				</p>
 
 				<div class="footer__bottom-image">
 					<img src="#" alt="">
