--- a/#source/html/content/instagram.html
+++ b/#source/html/content/instagram.html
@@ -2,42 +2,42 @@
 <section class="instagram">
 	<div class="instagram__row">
 
-		<div class="instagram__column">
+		<div class="instagram__column wow animate__fadeInDownBig " data-wow-offset=" 150">
 
-			<div class="instagram__image ibg">
+			<div class="instagram__image ibg ">
 				<img src="assets/images/istagram/Img.png" alt="">
 			</div>
 
 		</div>
 
-		<div class="instagram__column">
+		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="200ms" data-wow-offset=" 150">
 
 			<div class="instagram__image ibg">
-				<img src="assets/images/istagram/Img1.png" alt="">
+				<img src="../assets/images/istagram/Img1.png" alt="">
 			</div>
 
 		</div>
 
-		<div class="instagram__column">
+		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="400ms" data-wow-offset=" 150">
 
 			<div class="instagram__image ibg">
-				<img src="assets/images/istagram/Img2.png" alt="">
+				<img src="../assets/images/istagram/Img2.png" alt="">
 			</div>
 
 		</div>
 
-		<div class="instagram__column">
+		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="600ms" data-wow-offset=" 150">
 
 			<div class="instagram__image ibg">
-				<img src="assets/images/istagram/Img3.png" alt="">
+				<img src="../assets/images/istagram/Img3.png" alt="">
 			</div>
 
 		</div>
 
-		<div class="instagram__column">
+		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="800ms" data-wow-offset=" 150">
 
 			<div class="instagram__image ibg">
-				<img src="assets/images/istagram/Img4.png" alt="">
+				<img src="../assets/images/istagram/Img4.png" alt="">
 			</div>
 
 		</div>
