--- a/#source/html/content/smoothies.html
+++ b/#source/html/content/smoothies.html
@@ -3,8 +3,10 @@
 	<div class="content-smoothies">
 
 		<div class="smoothies__desripction">
-			<h2 class="title">What are these smoothies? </h2>
-			<p class="text smoothie__text">
+			<h2 class="title wow animate__fadeInLeftBig  " data-wow-duration=" 2s">What are these
+				smoothies? </h2>
+			<p class=" text smoothie__text wow animate__fadeInRightBig " data-wow-delay=" 1s" data-wow-offset=" 150"
+				data-wow-duration="1.5s">
 				A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
 				(milk, yogurt, <br> ice-cream or cottage cheese), typically using a blender. Smoothies may be made using
 				other
@@ -13,7 +15,7 @@
 			</p>
 		</div>
 
-		<div class="smoothies__row">
+		<div class="smoothies__row wow animate__fadeInUpBig" data-wow-delay=" 1s" data-wow-offset=" 150">
 
 			<div class="smoothies__column">
 				<div class="smoothies__wrapper">
