--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -50,7 +50,7 @@
 								<a class="icon__link " href="#">
 									<img src="assets/images/header/Cart-icon.png" alt="#">
 									<div class="icon__tabs">
-										<p>0</p>
+										<p id="number">0</p>
 									</div>
 								</a>
 							</li>
