--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<a class="icon__link " href="#">
 									<img src="assets/images/header/Cart-icon.png" alt="#">
 									<div class="icon__tabs">
-										<p>0</p>
+										<p id="number">0</p>
 									</div>
 								</a>
 							</li>
@@ -497,50 +497,28 @@
 
 <!----------------blog------------------->
 <!----------------instagram------------------->
-<section class="instagram">
-	<div class="instagram__row">
+<section class="instagram instagram__row">
 
-		<div class="instagram__column wow animate__fadeInDownBig " data-wow-offset=" 150">
-
-			<div class="instagram__image ibg ">
-				<img src="assets/images/istagram/Img.png" alt="">
-			</div>
-
-		</div>
-
-		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="200ms" data-wow-offset=" 150">
-
-			<div class="instagram__image ibg">
-				<img src="../assets/images/istagram/Img1.png" alt="">
-			</div>
-
-		</div>
-
-		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="400ms" data-wow-offset=" 150">
-
-			<div class="instagram__image ibg">
-				<img src="../assets/images/istagram/Img2.png" alt="">
-			</div>
-
-		</div>
-
-		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="600ms" data-wow-offset=" 150">
-
-			<div class="instagram__image ibg">
-				<img src="../assets/images/istagram/Img3.png" alt="">
-			</div>
-
-		</div>
-
-		<div class="instagram__column wow animate__fadeInDownBig " data-wow-delay="800ms" data-wow-offset=" 150">
-
-			<div class="instagram__image ibg">
-				<img src="../assets/images/istagram/Img4.png" alt="">
-			</div>
-
-		</div>
-
+	<div class="instagram__image  wow animate__fadeInDownBig " data-wow-offset=" 150">
+		<img src="assets/images/istagram/Img.png" alt="">
 	</div>
+
+	<div class=" instagram__image  wow animate__fadeInDownBig " data-wow-delay=" 200ms" data-wow-offset=" 150">
+		<img src="../assets/images/istagram/Img1.png" alt="">
+	</div>
+
+	<div class=" instagram__image wow animate__fadeInDownBig " data-wow-delay=" 400ms" data-wow-offset=" 150">
+		<img src="../assets/images/istagram/Img2.png" alt="">
+	</div>
+
+	<div class="instagram__image wow animate__fadeInDownBig " data-wow-delay="600ms" data-wow-offset=" 150">
+		<img src="../assets/images/istagram/Img3.png" alt="">
+	</div>
+
+	<div class="instagram__image wow animate__fadeInDownBig " data-wow-delay="800ms" data-wow-offset=" 150">
+		<img src="../assets/images/istagram/Img4.png" alt="">
+	</div>
+
 </section>
 
 <!----------------instagram------------------->
