--- a/#source/html/content/about.html
+++ b/#source/html/content/about.html
@@ -1,5 +1,5 @@
 <!----------------about------------------->
-<section class="about">
+<section class="about" id="About">
 	<div class="about__conteiner">
 		<div class="about__row">
 
