--- a/#source/html/content/blog.html
+++ b/#source/html/content/blog.html
@@ -1,5 +1,5 @@
 <!----------------blog------------------->
-<section class="blog">
+<section class="blog" id="Blog">
 	<div class="blog__body">
 		<div class="conteiner__blog">
 
