--- a/#source/html/content/smoothies.html
+++ b/#source/html/content/smoothies.html
@@ -1,5 +1,5 @@
 <!----------------smoothies------------------->
-<section class="smoothies">
+<section class="smoothies" id="Home">
 	<div class="content-smoothies">
 
 		<div class="smoothies__desripction">
