--- a/#source/html/content/testimonials.html
+++ b/#source/html/content/testimonials.html
@@ -1,5 +1,5 @@
 <!----------------testimonials------------------->
-<section class="testimonials">
+<section class="testimonials" id="Testimonials">
 	<div class="testimonials__wrapper">
 
 		<h2 class="title wow animate__fadeInDownBig" data-wow-duration=" 1s" data-wow-offset=" 150">Why clients <span
