--- a/#source/html/footer.html
+++ b/#source/html/footer.html
@@ -183,9 +183,8 @@
 
 				<p class="footer__bottom-text wow animate__fadeInRightBig " data-wow-duration="1.5s">Go top
 				</p>
-
 				<div class="footer__bottom-image">
-					<img src="#" alt="">
+					<a class="footer__bottom-image-img" href="#header"></a></a>
 				</div>
 			</div>
 
