--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--*************************************-->
 
-<header class="header">
+<header class="header" id="header">
 
 	<div class="conteiner">
 		<div class="header__row">
@@ -29,12 +29,12 @@
 				<div class="header__column ">
 					<nav class="header__nav">
 						<ul class="nav__list">
-							<li class="nav__item"><a href="#">Home</a></li>
-							<li class="nav__item"><a href="#">Shop</a></li>
-							<li class="nav__item"><a href="#">Story</a></li>
-							<li class="nav__item"><a href="#">About</a></li>
-							<li class="nav__item"><a href="#">Blog</a></li>
-							<li class="nav__item"><a href="#">Testimonials</a></li>
+							<li class="nav__item"><a href="#Home">Home</a></li>
+							<li class="nav__item"><a href="#Shop">Shop</a></li>
+							<li class="nav__item"><a href="#Story">Story</a></li>
+							<li class="nav__item"><a href="#About">About</a></li>
+							<li class="nav__item"><a href="#Blog">Blog</a></li>
+							<li class="nav__item"><a href="#Testimonials">Testimonials</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -125,7 +125,7 @@
 		<main class="content">
 
 <!----------------smoothies------------------->
-<section class="smoothies">
+<section class="smoothies" id="Home">
 	<div class="content-smoothies">
 
 		<div class="smoothies__desripction">
@@ -223,7 +223,7 @@
 </section>
 <!----------------smoothies------------------->
 <!----------------about------------------->
-<section class="about">
+<section class="about" id="About">
 	<div class="about__conteiner">
 		<div class="about__row">
 
@@ -275,7 +275,7 @@
 
 <!----------------about------------------->
 <!----------------products------------------->
-<section class="products">
+<section class="products " id="Shop">
 	<div class="products__row">
 
 		<div class="products__column">
@@ -361,7 +361,7 @@
 
 <!----------------products------------------->
 <!----------------story------------------->
-<section class="story">
+<section class="story" id="Story">
 	<div class="content__story">
 		<div class="story__row">
 
@@ -399,7 +399,7 @@
 
 <!----------------story------------------->
 <!----------------testimonials------------------->
-<section class="testimonials">
+<section class="testimonials" id="Testimonials">
 	<div class="testimonials__wrapper">
 
 		<h2 class="title wow animate__fadeInDownBig" data-wow-duration=" 1s" data-wow-offset=" 150">Why clients <span
@@ -452,7 +452,7 @@
 
 <!----------------testimonials------------------->
 <!----------------blog------------------->
-<section class="blog">
+<section class="blog" id="Blog">
 	<div class="blog__body">
 		<div class="conteiner__blog">
 
@@ -708,9 +708,8 @@
 
 				<p class="footer__bottom-text wow animate__fadeInRightBig " data-wow-duration="1.5s">Go top
 				</p>
-
 				<div class="footer__bottom-image">
-					<img src="#" alt="">
+					<a class="footer__bottom-image-img" href="#header"></a></a>
 				</div>
 			</div>
 
