--- a/#source/html/content/products.html
+++ b/#source/html/content/products.html
@@ -1,5 +1,5 @@
 <!----------------products------------------->
-<section class="products">
+<section class="products " id="Shop">
 	<div class="products__row">
 
 		<div class="products__column">
