--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -3,7 +3,7 @@
 
 <!--*************************************-->
 
-<header class="header">
+<header class="header" id="header">
 
 	<div class="conteiner">
 		<div class="header__row">
@@ -14,12 +14,12 @@
 				<div class="header__column ">
 					<nav class="header__nav">
 						<ul class="nav__list">
-							<li class="nav__item"><a href="#">Home</a></li>
-							<li class="nav__item"><a href="#">Shop</a></li>
-							<li class="nav__item"><a href="#">Story</a></li>
-							<li class="nav__item"><a href="#">About</a></li>
-							<li class="nav__item"><a href="#">Blog</a></li>
-							<li class="nav__item"><a href="#">Testimonials</a></li>
+							<li class="nav__item"><a href="#Home">Home</a></li>
+							<li class="nav__item"><a href="#Shop">Shop</a></li>
+							<li class="nav__item"><a href="#Story">Story</a></li>
+							<li class="nav__item"><a href="#About">About</a></li>
+							<li class="nav__item"><a href="#Blog">Blog</a></li>
+							<li class="nav__item"><a href="#Testimonials">Testimonials</a></li>
 						</ul>
 					</nav>
 				</div>
