--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
 					<h3 class="products__caption">Dark
 						Chocolate
 						Smoothie</h3>
-					<p class="text products__text ">
+					<span class="text products__text ">
 						100
-						ml</p>
+						ml</span>
 
 					<button class="bth  products__bth  " type="submit">Buy</button>
 
@@ -239,8 +239,8 @@
 					<h3 class="products__caption ">
 						Vegan Lettuce
 						Smoothie</h3>
-					<p class="text products__text ">
-						100 ml</p>
+					<span class="text products__text ">
+						100 ml</span>
 
 					<button class="bth  products__bth  " type="submit">Buy</button>
 
@@ -252,8 +252,8 @@
 					<h3 class="products__caption  ">
 						Lemon Ginger
 						Smoothie</h3>
-					<p class="text products__text ">
-						100 ml</p>
+					<span class="text products__text ">
+						100 ml</span>
 					<button class="bth  products__bth  " type="submit">Buy</button>
 				</div>
 
@@ -276,13 +276,10 @@
 		<section class="story" id="Story">
 			<div class="content__story">
 				<div class="story__row">
-
 					<div class="story__column">
-						<div class="story__wrapper">
-
-							<h2 class="title title--left  ">Our
+							<h2 class="story__title title ">Our
 								story</h2>
-							<p class="text  text--left story__text  animate__fadeInLeft">
+							<p class="text story__text  ">
 								As products typically using raw fruits or vegetables,
 								smoothies include dietary fiber (e.g. pulp, skin, and
 								seeds) and so are thicker than fruit juice, often with a
@@ -290,16 +287,10 @@
 							</p>
 
 							<button class="bth storu__bth  " type="submit">Who we are</button>
-
-						</div>
 					</div>
 
-					<div class="story__column">
-						<div class="story__image ibg  animate__fadeInRight">
-							<img src="assets/images/story/img.png" alt="story">
-						</div>
-						<img class="story__image--stamp  " data--delay=" 1s" src="assets/images/story/Stamp.png" alt="">
-
+					<div class="story__image">
+						<img src="assets/images/story/img.png" alt="story">
 					</div>
 
 				</div>
