fix section testimonials

--- a/index.html
+++ b/index.html
@@ -277,16 +277,16 @@
 			<div class="content__story">
 				<div class="story__row">
 					<div class="story__column">
-							<h2 class="story__title title ">Our
-								story</h2>
-							<p class="text story__text  ">
-								As products typically using raw fruits or vegetables,
-								smoothies include dietary fiber (e.g. pulp, skin, and
-								seeds) and so are thicker than fruit juice, often with a
-								consistency similar to a milkshake.
-							</p>
+						<h2 class="story__title title ">Our
+							story</h2>
+						<p class="text story__text  ">
+							As products typically using raw fruits or vegetables,
+							smoothies include dietary fiber (e.g. pulp, skin, and
+							seeds) and so are thicker than fruit juice, often with a
+							consistency similar to a milkshake.
+						</p>
 
-							<button class="bth storu__bth  " type="submit">Who we are</button>
+						<button class="bth storu__bth  " type="submit">Who we are</button>
 					</div>
 
 					<div class="story__image">
@@ -315,9 +315,9 @@
 							really make use of Smoothie! Smoothie saved my business.
 						</q>
 
-						<div class="testimonials__sub-text">
-							<cite class="testimonials-name__user  Big">- from Santa Monica, CA</cite>
-						</div>
+
+						<cite class="testimonials-name__user">- from Santa Monica, CA</cite>
+
 
 					</div>
 
