section fix blog

--- a/index.html
+++ b/index.html
@@ -351,70 +351,59 @@
 		<!----------------testimonials------------------->
 		<!----------------blog------------------->
 		<section class="blog" id="Blog">
-			<div class="blog__body">
-				<div class="conteiner__blog">
+			<div class="conteiner__blog">
 
-					<div class="blog__row">
+				<div class="blog__row">
 
-						<div class="blog__column">
-
-							<h2 class="title title--left   ">Our
-								blog</h2>
-							<div class="blog__image-wrapper">
-								<div class="blog__image ibg   " data--offset=" 350">
-									<img src="assets/images/blog/Img.png" alt="">
-								</div>
-							</div>
-
-						</div>
-
-						<div class="blog__column">
-							<div class="blog__wrapper">
-
-								<h3 class="title blog__title   " data--duration="1.5s">
-									ASAFOETIDA - THE NEXT TURMERIC?</h3>
-								<time class="blog__time  " data--duration="1.5s">jun 16.2020</time>
-								<p class="text blog__text   " data--duration="1.5s">
-									If the fruit ingredients and the green vegetable ingredients are both juiced ahead of
-									time, the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice
-									or
-									anything...<span> Read More</span>
-								</p>
-							</div>
-
-						</div>
+					<div class="blog__column">
+						<h2 class="blog__caption title">
+							blog</h2>
+						<img class="blog__image" src="assets/images/blog/Img.png" alt="">
 					</div>
 
-					<h4 class="blog__title-bottom"><span>ashasuperfoods</span></h4>
-
+					<div class="blog__column">
+						<h3 class="title blog__title   ">
+							ASAFOETIDA - THE NEXT TURMERIC?</h3>
+						<time class="blog__time  ">jun 16.2020</time>
+						<p class="text blog__text   ">
+							If the fruit ingredients and the green vegetable ingredients are both juiced ahead of
+							time, the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice
+							or
+							anything...<span> Read More</span>
+						</p>
+					</div>
 				</div>
+
+
+
 			</div>
 		</section>
 
 		<!----------------blog------------------->
 		<!----------------instagram------------------->
-		<section class="instagram instagram__row">
+		<section class="instagram ">
+			<h2 class="instagram__title ">ashasuperfoods</h2>
+			<div class="instagram__row">
+				<div class="instagram__image   Big ">
+					<img src="assets/images/istagram/Img.png" alt="">
+				</div>
 
-			<div class="instagram__image   Big ">
-				<img src="assets/images/istagram/Img.png" alt="">
+				<div class=" instagram__image   Big " data--delay=" 200ms">
+					<img src="../assets/images/istagram/Img1.png" alt="">
+				</div>
+
+				<div class=" instagram__image  Big " data--delay=" 400ms">
+					<img src="../assets/images/istagram/Img2.png" alt="">
+				</div>
+
+				<div class="instagram__image  Big " data--delay="600ms">
+					<img src="../assets/images/istagram/Img3.png" alt="">
+				</div>
+
+				<div class="instagram__image  Big " data--delay="800ms">
+					<img src="../assets/images/istagram/Img4.png" alt="">
+				</div>
 			</div>
-
-			<div class=" instagram__image   Big " data--delay=" 200ms">
-				<img src="../assets/images/istagram/Img1.png" alt="">
-			</div>
-
-			<div class=" instagram__image  Big " data--delay=" 400ms">
-				<img src="../assets/images/istagram/Img2.png" alt="">
-			</div>
-
-			<div class="instagram__image  Big " data--delay="600ms">
-				<img src="../assets/images/istagram/Img3.png" alt="">
-			</div>
-
-			<div class="instagram__image  Big " data--delay="800ms">
-				<img src="../assets/images/istagram/Img4.png" alt="">
-			</div>
-
 		</section>
 
 		<!----------------instagram------------------->
@@ -428,16 +417,16 @@
 				<!----colum-------------------------------------------------->
 				<div class="footer__column">
 					<div class="footer__image">
-						<img class="  " data--duration="1.5s" src="assets/images/header/Logo.png" alt="#">
+						<img class="  " src="assets/images/header/Logo.png" alt="#">
 					</div>
 				</div>
 				<!----colum-------------------------------------------------->
-				<div class="footer__column   " data--duration="1.5s">
+				<div class="footer__column   ">
 
 					<h3 class="products__caption footer__title">Information</h3>
 
 					<ul class="footer__list">
-						<li class="footer__item   " data--delay="150ms" data--duration="1.5s">
+						<li class="footer__item   " data--delay="150ms">
 							<a href="#">Search</a>
 						</li>
 					</ul>
@@ -462,11 +451,11 @@
 
 				</div>
 				<!----colum-------------------------------------------------->
-				<div class="footer__column   " data--delay="600ms" data--duration="1.5s">
+				<div class="footer__column   " data--delay="600ms">
 
 					<h3 class="products__caption footer__title">Payment</h3>
 					<!---sub-colum-------------------------------------------------->
-					<ul class="footer-icon__list   " data--delay="600ms" data--duration="1.5s">
+					<ul class="footer-icon__list   " data--delay="600ms">
 
 						<li class="footer-icon__item ">
 							<a class="footer-icon__link" href="#">
@@ -494,7 +483,7 @@
 
 					</ul>
 					<!--- sub-colum-------------------------------------------------->
-					<ul class="footer-icon__list  " data--delay="800ms" data--duration="1.5s">
+					<ul class="footer-icon__list  " data--delay="800ms">
 
 						<li class="footer-icon__item">
 							<a class="footer-icon__link" href="#">
@@ -516,7 +505,7 @@
 
 					</ul>
 					<!--- sub-colum-------------------------------------------------->
-					<ul class="footer-icon__list   " data--delay="1000ms" data--duration="1.5s">
+					<ul class="footer-icon__list   " data--delay="1000ms">
 
 						<li class="footer-icon__item">
 							<a class="footer-icon__link" href="#">
@@ -534,12 +523,12 @@
 					<!----------------------------------------------------->
 				</div>
 				<!----colum-------------------------------------------------->
-				<div class="footer__column   " data--delay="1200ms" data--duration="1.5s">
+				<div class="footer__column   " data--delay="1200ms">
 					<h3 class="products__caption footer__title">Don’t miss out!</h3>
 
 					<div class="input">
 
-						<input class="input__search   " data--delay="1000ms" data--duration="1.5s" type="search" name="search"
+						<input class="input__search   " data--delay="1000ms" type="search" name="search"
 							placeholder="Subscribe to our newsletter">
 						<img class="input__image" src="../assets/images/footer/Icon.png" alt="">
 
@@ -547,11 +536,11 @@
 
 					<div class="footer__row footer__row--df">
 
-						<h3 class="footer__text   " data--delay="1200ms" data--duration="1.5s">
+						<h3 class="footer__text   " data--delay="1200ms">
 							<span> Follow Us</span>
 						</h3>
 						<!--- sub-colum-------------------------------------------->
-						<ul class="footer-icon__list  " data--delay="1200ms" data--duration="1.5s">
+						<ul class="footer-icon__list  " data--delay="1200ms">
 
 							<li class="footer-icon__item ">
 								<a class="footer-icon__link" href="#">
@@ -588,12 +577,12 @@
 		<div class="footer__bottom--bg">
 			<div class="conteiner">
 				<div class="footer__bottom">
-					<address class="author-rights   " data--duration="1.5s">
+					<address class="author-rights   ">
 						© 2020.
 						All Rights Reserved.
 					</address>
 
-					<p class="footer__bottom-text  " data--duration="1.5s">Go top
+					<p class="footer__bottom-text  ">Go top
 					</p>
 					<div class="footer__bottom-image">
 						<a class="footer__bottom-image-img" href="#header"></a></a>
