section fix footer

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		<section class="testimonials" id="Testimonials">
 			<div class="testimonials__wrapper">
 
-				<h2 class="title  Big">Why clients
+				<h2 class="title  ">Why clients
 					<span class="title--color "> LOVE</span> us?
 				</h2>
 
@@ -384,24 +384,24 @@
 		<section class="instagram ">
 			<h2 class="instagram__title ">ashasuperfoods</h2>
 			<div class="instagram__row">
-				<div class="instagram__image   Big ">
+				<div class="instagram__image">
 					<img src="assets/images/istagram/Img.png" alt="">
 				</div>
 
-				<div class=" instagram__image   Big " data--delay=" 200ms">
-					<img src="../assets/images/istagram/Img1.png" alt="">
+				<div class=" instagram__image">
+					<img src="assets/images/istagram/Img1.png" alt="">
 				</div>
 
-				<div class=" instagram__image  Big " data--delay=" 400ms">
-					<img src="../assets/images/istagram/Img2.png" alt="">
+				<div class=" instagram__image">
+					<img src="assets/images/istagram/Img2.png" alt="">
 				</div>
 
-				<div class="instagram__image  Big " data--delay="600ms">
-					<img src="../assets/images/istagram/Img3.png" alt="">
+				<div class="instagram__image ">
+					<img src="assets/images/istagram/Img3.png" alt="">
 				</div>
 
-				<div class="instagram__image  Big " data--delay="800ms">
-					<img src="../assets/images/istagram/Img4.png" alt="">
+				<div class="instagram__image ">
+					<img src="assets/images/istagram/Img4.png" alt="">
 				</div>
 			</div>
 		</section>
@@ -530,11 +530,11 @@
 
 						<input class="input__search   " data--delay="1000ms" type="search" name="search"
 							placeholder="Subscribe to our newsletter">
-						<img class="input__image" src="../assets/images/footer/Icon.png" alt="">
+						<img class="input__image" src="assets/images/footer/Icon.png" alt="">
 
 					</div>
 
-					<div class="footer__row footer__row--df">
+					<div class="footer__wrap-row footer__row--df">
 
 						<h3 class="footer__text   " data--delay="1200ms">
 							<span> Follow Us</span>
@@ -581,9 +581,6 @@
 						© 2020.
 						All Rights Reserved.
 					</address>
-
-					<p class="footer__bottom-text  ">Go top
-					</p>
 					<div class="footer__bottom-image">
 						<a class="footer__bottom-image-img" href="#header"></a></a>
 					</div>
