--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 					</div>
 
 					<div class="story__image">
-						<img src="assets/images/story/img.png" alt="story">
+						<img src="assets/images/story/Img.png" alt="story">
 					</div>
 
 				</div>
