--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			<div class="about__row">
 
 				<div class="about__wrap-img">
-					<img class="about__image " src="assets/images/about/about.png" alt="#">
+					<img class="about__image imgTrasform" src="assets/images/about/about.png" alt="#">
 				</div>
 
 				<div class="about__description  ">
@@ -289,8 +289,8 @@
 						<button class="bth storu__bth  " type="submit">Who we are</button>
 					</div>
 
-					<div class="story__image">
-						<img src="assets/images/story/Img.png" alt="story">
+					<div class="story__image imgTrasform">
+						<img class="" src="assets/images/story/Img.png" alt="story">
 					</div>
 
 				</div>
@@ -358,7 +358,7 @@
 					<div class="blog__column">
 						<h2 class="blog__caption title">
 							blog</h2>
-						<img class="blog__image" src="assets/images/blog/Img.png" alt="">
+						<img class="blog__image imgTrasform" src="assets/images/blog/Img.png" alt="">
 					</div>
 
 					<div class="blog__column">
